// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MainHeader.vue > matches snapshot 1`] = `
"<q-header bordered="" class="bg-black text-white">
  <q-toolbar>
    <q-btn flat="" round="" dense="" icon="menu" aria-label="app.toggle_menu"></q-btn>
    <q-toolbar-title class="text-weight-bold">
      <q-avatar role="img" aria-label="app.logo_alt" size="40px"><img src="/icons/starlight-logo.png" alt="" width="40" height="40" fetchpriority="high"></q-avatar> Starlight Tech Radar
    </q-toolbar-title>
    <q-space></q-space>
  </q-toolbar>
</q-header>"
`;

exports[`MainHeader.vue > matches snapshot in dark mode 1`] = `
"<q-header bordered="" class="bg-primary text-grey-10">
  <q-toolbar>
    <q-btn flat="" round="" dense="" icon="menu" aria-label="app.toggle_menu"></q-btn>
    <q-toolbar-title class="text-weight-bold">
      <q-avatar role="img" aria-label="app.logo_alt" size="40px"><img src="/icons/starlight-logo.png" alt="" width="40" height="40" fetchpriority="high"></q-avatar> Starlight Tech Radar
    </q-toolbar-title>
    <q-space></q-space>
  </q-toolbar>
</q-header>"
`;
